--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <td>Estoque</td>
             </tr>
             <tr>
-                <td>Camiseta</td>
+                <td>Bermuda</td>
                 <td>Amarela</td>
                 <td>P</td>
                 <td>R$65,00</td>
