--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td>Camiseta</td>
-                <td>Preta</td>
+                <td>Vermelha</td>
                 <td>M</td>
                 <td>R$60,00</td>
                 <td>Estoque</td>
